.ub-exorcism/2026-05-15-exhaustive/phase5_experiment_results/EXP-053_compile_fail.log
error[E0277]: the trait bound `BrokenPipe: UvHandle` is not satisfied
  --> compile_fail_demo.rs:64:34
   |
64 |     let _ = get_handle_via_trait(&mut broken);
   |             -------------------- ^^^^^^^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `UvHandle` is not implemented for `BrokenPipe`
  --> compile_fail_demo.rs:38:1
   |
38 | pub struct BrokenPipe {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `UvHandle` is implemented for `GoodPipe`
  --> compile_fail_demo.rs:35:1
   |
35 | unsafe impl UvHandle for GoodPipe {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `get_handle_via_trait`
  --> compile_fail_demo.rs:49:28
   |
49 | fn get_handle_via_trait<T: UvHandle>(pipe: &mut T) -> *mut uv_handle_t {
   |                            ^^^^^^^^ required by this bound in `get_handle_via_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
